--- a/package.json
+++ b/package.json
@@ -12,10 +12,25 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "validator": "^13.1.1"
   },
   "devDependencies": {
     "jest": "^26.1.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "precommit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{json,js}": [
+      "prittier --write", "git add"
+    ],
+    "*": "git add"
+
   }
 }
