--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
     "validator": "^13.1.1"
   },
   "devDependencies": {
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11"
   },
   "husky": {
     "hooks": {
